Upload after Missouri v. Biden coding

--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
   console.log('Fetching and processing CSV file...');
 
   // Define CSV file and its corresponding colors
-  const csvFile = 'final_dataset.csv';
+  const csvFile = 'final_dataset2.csv';
   const colorMap = {
+    'Cambridge Analytica Scandal': '#008000',
+    'Missouri v. Biden': '#008000',
+    'January 6th events': '#008000',
     'Tow Center News': '#1035C8',
     'Letra Chica Twitter': '#1035C8',
     'Letra Chica YouTube': '#1035C8',
